# mc-generation-rust

./: .gitignore  Cargo.toml  README.md  build.bat
.github/workflows/: rust.yml
assets/textures/: README.md
src/: camera.rs  chunk.rs  common.rs  debug.rs  hud.rs  ivec2xz.rs  main.rs  prelude.rs  tests.rs
src/game/: camera.rs  chunk.rs  common.rs  debug.rs  hud.rs  mod.rs  old.old
