[package]
name = "voxel-generation-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.11.0", features = ["dynamic_linking"] }
bevy_flycam = { git = "https://github.com/sburris0/bevy_flycam", branch = "bevy_0.11" }
bevy-inspector-egui = "0.19"
bevy_prototype_debug_lines = { version = "0.11", features = ["3d"] }
noise = "0.8.2"
bevy_atmosphere = "0.7.0"
bevy_rapier3d = { version = "0.22", features = [
    "simd-stable",
    "debug-render-3d",
] }
futures-lite = "1.13.0"
color-eyre = "0.6.0"

[workspace]
resolver = "2" # Important! wgpu/Bevy needs this!

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# Fast physics
[profile.dev.package.bevy_rapier3d]
opt-level = 3

[profile.release]
codegen-units = 1

# Fast color-eyre
[profile.dev.package.backtrace]
opt-level = 3
